--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/style.css" type="text/css">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>alamin momin</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
   <h1>Hello World!</h1>
   </head>
+
+  <body>
+  </body>
+</html>
