--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
- <link rel="stylesheet" type = "text/css" href="style.css">
+<link rel="stylesheet" type = "text/css" href="style.css">
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>alamin momin</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
-  <h1>Hello World!</h1>
-  </head>
+ </head>
 
   <body>
+  <!--Nav Bar-->
+  <nav id="navbar" class="nav">
+  <ul class="nav-list">
+    <li>
+      <a href="#welcome-section">About 🧑🏽‍💻</a>
+    </li>
+    <li>
+      <a href="#interests">Interests</a>
+    </li>
+    <li>
+      <a href="#contact">Contact</a>
+    </li>
+  </ul>
+</nav>
+   <h1>Hello World!</h1>
+ 
   </body>
 </html>
