--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <a href="#welcome-section">About 🧑🏽‍💻</a>
     </li>
     <li>
-      <a href="#interests">Interests</a>
+      <a href="#interests">Interests 🏀</a>
     </li>
     <li>
-      <a href="#contact">Contact</a>
+      <a href="#contact">Contact 📱</a>
     </li>
   </ul>
 </nav>
