--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <a href="#contact">Contact 📱</a>
     </li>
   </ul>
-</nav>
+  </nav>
+  <!--End of Nav Bar -->
+  
    <h1>Hello World!</h1>
  
   </body>
