sports image updated

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </a>
    
     <a href="https://bleacherreport.com/" target="_blank" class="interests-item">
-      <img class="interests-image" src="images/sports.jpg" alt="sports analytics" data-hover="Sports"/>
+      <img class="interests-image" src="images/sports.jpeg" alt="sports analytics" data-hover="Sports"/>
       <p class="project-title">
       <span class="code">🏐</span>
         sports
