--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <nav id="navbar" class="nav">
     <ul class="nav-list">
       <li>
-        <a href="#welcome-section">About&nbsp;&nbsp;&nbsp;<span id = "emoji1"><i class="fas fa-user-tie" style="font-size:24px;color:#0084ff"></i></span></a>
+        <a href="#welcome-section">About&nbsp;&nbsp;&nbsp;<span id = "emoji1"><i class="fas fa-user-tie" style="font-size:24px"></i></span></a>
       </li>
       <li>
-        <a href="#interests">Interests&nbsp;&nbsp;<span id = "emoji2"><i class="fas fa-basketball-ball" style="font-size:24px;color:#0084ff"></i></span></a>
+        <a href="#interests">Interests&nbsp;&nbsp;<span id = "emoji2"><i class="fas fa-basketball-ball" style="font-size:24px"></i></span></a>
       </li>
       <li>
-        <a href="#contact">Contact&nbsp;&nbsp;<span id = "emoji3"><i class="fas fa-mobile-alt" style="font-size:24px;color:#0084ff"></i></span></a>
+        <a href="#contact">Contact&nbsp;&nbsp;<span id = "emoji3"><i class="fas fa-mobile-alt" style="font-size:24px;"></i></span></a>
       </li>
     </ul>
   </nav>
