--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
  <div class = "interests-grid">
     <a href="https://techcrunch.com/" target="_blank" class="interests-item">
-        <img class="interests-image" src="images/tech.jpg" alt="#AR-glasses">
+        <img class="interests-image tech" src="images/tech.jpeg" alt="tesla cybertruck">
         <p class="project-title">
           <span class="code">💻</span>
           tech
@@ -53,7 +53,7 @@
     </a>
    
     <a href="https://bleacherreport.com/" target="_blank" class="interests-item">
-      <img class="interests-image" src="images/sports.jpeg" alt="sports analytics" data-hover="Sports"/>
+      <img class="interests-image" src="images/sports.png" alt="sports analytics" data-hover="Sports"/>
       <p class="project-title">
       <span class="code">🏐</span>
         sports
