Edits to Images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
  <div class = "interests-grid">
     <a href="https://techcrunch.com/" target="_blank" class="interests-item">
-        <img class="interests-image tech" src="images/tech.jpeg" alt="tesla cybertruck">
+        <img class="interests-image tech" src="images/tech.jpg" alt="tesla cybertruck">
         <p class="project-title">
           <span class="code">💻</span>
           tech
