--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!--End of Nav Bar-->
  
  <!--Greeting-->
-  <div id ="welcome">
+  <div class ="welcome">
     <section id="welcome-section" class="welcome-section">
       <div class="welcome-text">
         <span class="disappear">
@@ -69,9 +69,7 @@
           food
           <span class="code">🥑</span>
         </p>
-    </a>
-
-    
+      </a>
   </div>
 </section>
 
