Update navigation text to 'About Me'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav id="navbar" class="nav">
     <ul class="nav-list">
       <li>
-        <a href="#welcome-section">About&nbsp;&nbsp;&nbsp;<span id = "emoji1"><i class="fas fa-user-tie" style="font-size:24px"></i></span></a>
+        <a href="#welcome-section">This is a test&nbsp;&nbsp;&nbsp;<span id = "emoji1"><i class="fas fa-user-tie" style="font-size:24px"></i></span></a>
       </li>
       <li>
         <a href="#interests">Interests&nbsp;&nbsp;<span id = "emoji2"><i class="fas fa-basketball-ball" style="font-size:24px"></i></span></a>
