--- a/index.html
+++ b/index.html
@@ -1,91 +1,312 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" type = "text/css" href="style.css">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>alamin momin</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alamin Momin - Portfolio</title>
+    <meta name="description" content="Portfolio website of Alamin Momin - Software Developer">
+    <meta property="og:title" content="Alamin Momin - Portfolio">
+    <meta property="og:description" content="Portfolio website of Alamin Momin - Software Developer">
+    <meta property="og:type" content="website">
+    <link rel="icon" type="image/png" href="images/Logo.PNG">
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Red+Hat+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
-
 <body>
-  <!--Nav Bar-->
-  <nav id="navbar" class="nav">
-    <ul class="nav-list">
-      <li>
-        <a href="#welcome-section">This is a test&nbsp;&nbsp;&nbsp;<span id = "emoji1"><i class="fas fa-user-tie" style="font-size:24px"></i></span></a>
-      </li>
-      <li>
-        <a href="#interests">Interests&nbsp;&nbsp;<span id = "emoji2"><i class="fas fa-basketball-ball" style="font-size:24px"></i></span></a>
-      </li>
-      <li>
-        <a href="#contact">Contact&nbsp;&nbsp;<span id = "emoji3"><i class="fas fa-mobile-alt" style="font-size:24px;"></i></span></a>
-      </li>
-    </ul>
-  </nav>
-  <!--End of Nav Bar-->
- 
- <!--Greeting-->
-  <div class ="welcome">
-    <section id="welcome-section" class="welcome-section">
-      <div class="welcome-text">
-        <span class="disappear">
-          <h1>hey, i'm alamin</h1>
-          <p>welcome to my site</p>
-        </span>
-      </div>
-    </section>
-  </div>
+    <!-- Navigation -->
+    <nav>
+        <div class="container-custom">
+            <div class="nav-content">
+                <a href="#" class="logo">
+                    <img src="images/Logo.PNG" alt="AM Logo" class="nav-logo">
+                </a>
+                <div class="nav-desktop">
+                    <a href="#about">About</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <button class="nav-mobile" id="menu-button">
+                    <svg class="menu-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" width="24" height="24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </nav>
 
-<!--Blog-->
-<section id="interests" class="interests">
-  <h2 class="interests-header">What I'm Thinking About...</h2>
+    <!-- Mobile Menu -->
+    <div class="hidden" id="mobile-menu">
+        <div class="container-custom">
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div>
 
- <div class = "interests-grid">
-    <a href="https://techcrunch.com/" target="_blank" class="interests-item">
-        <img class="interests-image tech" src="images/tech.jpg" alt="tesla cybertruck">
-        <p class="project-title">
-          <span class="code">💻</span>
-          tech
-          <span class="code">⌚️</span>
-        </p>
-    </a>
-   
-    <a href="https://bleacherreport.com/" target="_blank" class="interests-item">
-      <img class="interests-image" src="images/sports.png" alt="sports analytics" data-hover="Sports"/>
-      <p class="project-title">
-      <span class="code">🏐</span>
-        sports
-        <span class="code">🏓</span>
-      </p>
-    </a>
+    <div class="main-container">
+        <!-- Home Section -->
+        <section id="home" class="section-padding">
+            <div class="container-custom">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1>Who Am I?</h1>
+                        <h2>I'm Alamin, and I like making dope <del>shit</del> products. I have over 5 years of experience as a Product Manager meticulously crafting digital experiences in ecommerce.</h2>
+                        <a href="#contact" class="btn-primary">Contact Me</a>
+                    </div>
+                    <div class="hero-image">
+                        <img src="images/image3.jpg" alt="Alamin Momin" class="profile-image">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <a href="https://www.bonappetit.com/recipe/strawberry-milk" target="_blank" class="interests-item">
-        <img class="interests-image" src="images/milk.jpg" alt="strawberry-milk" data-hover = "Food(?)"/>
-        <p class="project-title">
-          <span class="code">🍕</span>
-          food
-          <span class="code">🥑</span>
-        </p>
-      </a>
-  </div>
-</section>
+        <!-- About Section -->
+        <section id="about" class="section-padding bg-light">
+            <div class="container-custom">
+                <div class="grid grid-2">
+                    <div class="animate-on-scroll">
+                        <h2>About Me</h2>
+                        <p class="mb-4">I enjoy making products to solve problems. Some of the tools I like to use are:</p>
+                        <ul>
+                            <li>Amplitude (Analytics)</li>
+                            <li>User Testing (User Research)</li>
+                            <li>Python and Excel (Programming)</li>
+                            <li>Atlassian Suite (Collaboration)</li>
+                        </ul>
+                        <p>I love to talk sports, tech, and space so do not hesitate to reach out and let's make something together!</p>
+                        <p>Some of my favorite books, shows, and movies:</p>
+                        <ul>
+                          <li>Interstellar</li>
+                          <li>Avatar the Last Airbender</li>
+                          <li>Astrophysics for People in a Hurry</li>
+                          <li>Hot Ones on YouTube</li>
+                          <li>Naruto</li>
+                          <li>The Imitation Game</li>
+                          <li>Back and Forth, with RDCWorld</li>
+                        </ul>
+                    </div>
+                    <div class="animate-on-scroll">
+                        <img src="images/About Me.jpg" alt="About Alamin Momin" class="about-image">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Projects Section -->
+        <!--
+        <section id="projects" class="section-padding">
+            <div class="container-custom">
+                <h2 class="text-center mb-8">Featured Projects</h2>
+                <div class="grid grid-3">
+                    <div class="card animate-on-scroll">
+                        <div class="placeholder-image" style="background-color: #e2e8f0; height: 200px;"></div>
+                        <div class="card-content">
+                            <h3>Project Title</h3>
+                            <p class="mb-4">Brief description of the project and its key features.</p>
+                            <div class="mb-4">
+                                <span class="tag">React</span>
+                                <span class="tag">Tailwind</span>
+                                <span class="tag">Node.js</span>
+                            </div>
+                            <div>
+                                <a href="#" class="link">GitHub</a>
+                                <a href="#" class="link">Live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        -->
 
-<section id="contact" class="contact-section">
-  <div class="contact-section-header">
-    <h2>More About Me...</h2>
-  </div>
-  <div class="contact-links">
-    <a href="https://www.linkedin.com/in/alaminmomin/" target="_blank" class="btn contact-details"><i class="fab fa-linkedin" style="font-size:48px;color:white"></i></a>
-    <a id="profile-link" href="https://github.com/Alamin-Momin" target="_blank" class="btn contact-details"><i class="fab fa-github" style="font-size:48px;color:white"></i></a>
-    <a href="files/resume.pdf" target="_blank" class="btn contact-details"><i class="far fa-file" style="font-size:48px;color:white"></i></a>
-    <a href="mailto:alamin.momin@utexas.edu" class="btn contact-details"><i class="far fa-envelope" style="font-size:48px;color:white"></i></a>
-    <a href="tel:713-257-0585" class="btn contact-details"><i class="fas fa-mobile-alt" style="font-size:48px;color:white"></i></a>
-  </div>
-</section>
+        <!-- Contact Section -->
+        <section id="contact" class="section-padding bg-light">
+            <div class="container-custom">
+                <div class="contact-container">
+                    <h2 class="text-center mb-8">Get in Touch</h2>
+                    <form action="https://formspree.io/f/mblgyrpa" method="POST" class="animate-on-scroll" id="contact-form">
+                        <div class="form-group">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" id="name" name="name" class="form-input" required>
+                            <div class="error-message" id="name-error"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" id="email" name="email" class="form-input" required 
+                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
+                                   title="Please enter a valid email address">
+                            <div class="error-message" id="email-error"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea id="message" name="message" rows="4" class="form-input" required></textarea>
+                            <div class="error-message" id="message-error"></div>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn-primary" id="submit-button">
+                                <span class="button-text">Send Message</span>
+                                <span class="button-loader hidden"></span>
+                            </button>
+                        </div>
+                        <div id="form-status" class="form-status hidden"></div>
+                        <h3 class="text-center" style="margin-top: 4rem; font-size: 2.4rem; color: var(--accent);">Check Me Out On</h3>
+                        <div class="social-links">
+                            <a href="https://www.linkedin.com/in/alaminmomin/" target="_blank" rel="noopener" class="social-link">
+                                <button class="social-button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                                    </svg>
+                                </button>
+                            </a>
+                            <a href="https://github.com/Alamin-Momin" target="_blank" rel="noopener" class="social-link">
+                                <button class="social-button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                    </svg>
+                                </button>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
 
+        <!-- Footer -->
+        <footer>
+            <div class="container-custom text-center">
+                <p>&copy; 2025 Alamin Momin. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script>
+        // Mobile menu toggle
+        const menuButton = document.getElementById('menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+        const menuIcon = document.querySelector('.menu-icon');
+        
+        menuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+            menuIcon.classList.toggle('active');
+        });
+
+        // Intersection Observer for animations
+        const observerOptions = {
+            threshold: 0.1
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('is-visible');
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.animate-on-scroll').forEach((element) => {
+            observer.observe(element);
+        });
+
+        // Form handling
+        const form = document.getElementById('contact-form');
+        const submitButton = document.getElementById('submit-button');
+        const buttonText = submitButton.querySelector('.button-text');
+        const buttonLoader = submitButton.querySelector('.button-loader');
+        const formStatus = document.getElementById('form-status');
+
+        function setLoading(isLoading) {
+            if (isLoading) {
+                submitButton.classList.add('loading');
+                buttonLoader.classList.remove('hidden');
+                buttonText.textContent = 'Sending...';
+                submitButton.disabled = true;
+            } else {
+                submitButton.classList.remove('loading');
+                buttonLoader.classList.add('hidden');
+                buttonText.textContent = 'Send Message';
+                submitButton.disabled = false;
+            }
+        }
+
+        function showStatus(message, type) {
+            formStatus.textContent = message;
+            formStatus.className = `form-status ${type}`;
+            formStatus.classList.remove('hidden');
+        }
+
+        function validateEmail(email) {
+            const re = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+            return re.test(String(email).toLowerCase());
+        }
+
+        form.addEventListener('submit', async function(event) {
+            event.preventDefault();
+            
+            // Reset previous errors
+            document.querySelectorAll('.error-message').forEach(el => el.textContent = '');
+            document.querySelectorAll('.form-input').forEach(el => {
+                el.classList.remove('error');
+                el.classList.remove('success');
+            });
+            formStatus.classList.add('hidden');
+
+            // Validate fields
+            let hasErrors = false;
+            const name = form.querySelector('#name').value.trim();
+            const email = form.querySelector('#email').value.trim();
+            const message = form.querySelector('#message').value.trim();
+
+            if (!name) {
+                document.getElementById('name-error').textContent = 'Name is required';
+                form.querySelector('#name').classList.add('error');
+                hasErrors = true;
+            }
+
+            if (!email || !validateEmail(email)) {
+                document.getElementById('email-error').textContent = 'Please enter a valid email address';
+                form.querySelector('#email').classList.add('error');
+                hasErrors = true;
+            }
+
+            if (!message) {
+                document.getElementById('message-error').textContent = 'Message is required';
+                form.querySelector('#message').classList.add('error');
+                hasErrors = true;
+            }
+
+            if (hasErrors) return;
+
+            // Show loading state
+            setLoading(true);
+
+            try {
+                const response = await fetch(form.action, {
+                    method: 'POST',
+                    body: new FormData(form),
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                });
+
+                const data = await response.json();
+
+                if (response.ok) {
+                    // Success
+                    form.reset();
+                    showStatus('Thank you! Your message has been sent.', 'success');
+                    document.querySelectorAll('.form-input').forEach(el => el.classList.add('success'));
+                } else {
+                    // Error
+                    showStatus('Oops! There was a problem sending your message. Please try again.', 'error');
+                }
+            } catch (error) {
+                showStatus('Oops! There was a problem sending your message. Please try again.', 'error');
+            } finally {
+                setLoading(false);
+            }
+        });
+    </script>
 </body>
 </html>
