Update website: Add new profile image, modify styles, and improve layout

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alamin Momin - Portfolio</title>
     <meta name="description" content="Portfolio website of Alamin Momin - Software Developer">
     <meta property="og:title" content="Alamin Momin - Portfolio">
@@ -34,35 +34,35 @@
                 </button>
             </div>
         </div>
-    </nav>
+  </nav>
 
     <!-- Mobile Menu -->
     <div class="hidden" id="mobile-menu">
         <div class="container-custom">
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
-        </div>
-    </div>
+      </div>
+  </div>
 
     <div class="main-container">
         <!-- Home Section -->
         <section id="home" class="section-padding">
             <div class="container-custom">
-                <div class="hero-content">
+                <div class="hero-content animate-on-scroll">
                     <div class="hero-text">
                         <h1>Who Am I?</h1>
                         <h2>I'm Alamin, and I like making dope <del>shit</del> products. I have over 5 years of experience as a Product Manager meticulously crafting digital experiences in ecommerce.</h2>
                         <a href="#contact" class="btn-primary">Contact Me</a>
                     </div>
                     <div class="hero-image">
-                        <img src="images/image3.jpg" alt="Alamin Momin" class="profile-image">
+                        <img src="images/AboutMeReal.jpg" alt="Alamin Momin" class="profile-image">
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- About Section -->
-        <section id="about" class="section-padding bg-light">
+        <section id="about" class="section-padding">
             <div class="container-custom">
                 <div class="grid grid-2">
                     <div class="animate-on-scroll">
@@ -90,8 +90,8 @@
                         <img src="images/About Me.jpg" alt="About Alamin Momin" class="about-image">
                     </div>
                 </div>
-            </div>
-        </section>
+  </div>
+</section>
 
         <!-- Projects Section -->
         <!--
@@ -168,9 +168,9 @@
                                     </svg>
                                 </button>
                             </a>
-                </div>
-            </div>
-        </section>
+  </div>
+  </div>
+</section>
 
         <!-- Footer -->
         <footer>
